# drt-vm-executor-rs

./: Makefile
c-api/: libvmexeccapi.h
c-api/src/: capi_executor.rs  capi_instance.rs  capi_vm_hook_pointers.rs  capi_vm_hooks.rs
vm-executor/: Cargo.toml  README.md
vm-executor-wasmer/: Cargo.toml
vm-executor-wasmer/src/: wasmer_imports.rs  wasmer_metering.rs  wasmer_service.rs
vm-executor/src/: vm_hooks.rs
